[package]
name         = "dvb-stream"
version      = "0.3.0"
edition      = "2024"
description  = "Async/tokio stream adapters over dvb-si SiDemux and dvb-t2mi T2miPump."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords     = ["dvb", "tokio", "async", "stream", "mpeg"]
categories   = ["asynchronous", "multimedia", "network-programming"]
repository   = "https://github.com/fishloa/rust-broadcast"
readme       = "README.md"
# dvb-stream is versioned and released INDEPENDENTLY from the dvb-si/dvb-t2mi
# lockstep. tokio's MSRV moves faster than the workspace 1.81; set explicitly.
rust-version = "1.86"

[package.metadata.docs.rs]
all-features = true

[dependencies]
dvb-si       = { path = "../dvb-si",   version = "8", default-features = false, features = ["ts", "std"] }
dvb-t2mi     = { path = "../dvb-t2mi", version = "8", default-features = false, features = ["ts", "std"] }
mpeg-ts      = { path = "../mpeg-ts",  version = "0.2", default-features = false, features = ["std"] }
futures-core = "0.3"
tokio        = { version = "1", default-features = false, features = ["io-util", "net"] }

[dev-dependencies]
tokio         = { version = "1", default-features = false, features = ["rt", "macros", "time", "net", "io-util"] }
broadcast-common    = { path = "../broadcast-common", version = "8" }
futures-util  = { version = "0.3", default-features = false }

[features]
default = ["udp"]
# Enables SectionStream::bind_multicast and T2miEventStream::bind_multicast.
# tokio's "net" feature is always present in [dependencies]; this feature flag
# just gates the convenience constructors themselves.
udp = []
