[package]
name    = "dvb-subtitle"
version = "0.2.0"
edition = "2024"
description = "DVB subtitling (bitmap) segment parser — ETSI EN 300 743, the segments carried in subtitle PES."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords = ["dvb", "subtitle", "subtitling", "broadcast", "mpeg-ts"]
categories = ["parser-implementations", "multimedia", "no-std"]
repository   = "https://github.com/fishloa/rust-broadcast"
readme       = "README.md"
rust-version = "1.86"
exclude = ["docs/**", "tests/fixtures/**"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
broadcast-common = { path = "../broadcast-common", version = "8", default-features = false }
thiserror  = { version = "2", default-features = false }
serde      = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
# Reassemble subtitle PES from a real TS capture in the integration fixture test.
mpeg-pes = { path = "../mpeg-pes", version = "0.2" }

[features]
default = ["std"]
# `std` links the standard library. Without it the crate is `#![no_std]` and
# needs only `alloc`.
std = ["broadcast-common/std", "thiserror/std"]
serde = ["dep:serde"]
