[package]
name    = "dvb_t2mi"
version = "0.1.0"
edition = "2021"
description = "ETSI TS 102 773 DVB-T2 Modulator Interface parser + builder."
license = "MIT OR Apache-2.0"
authors = ["Alex Fishloa"]
keywords = ["dvb", "t2mi", "mpeg", "broadcast"]
categories = ["parser-implementations", "multimedia"]
rust-version = "1.75"

[dependencies]
dvb_common = { path = "../dvb_common" }
thiserror  = "2"
bytes      = { version = "1", optional = true }

[features]
default = ["ts"]
ts      = ["dep:bytes"]
