[package]
name    = "dvb-t2mi"
version = "7.9.0"
edition = "2021"
description = "ETSI TS 102 773 DVB-T2 Modulator Interface parser + builder."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords = ["dvb", "t2mi", "mpeg", "broadcast"]
categories = ["parser-implementations", "multimedia"]
repository   = "https://github.com/fishloa/rust-dvb"
readme       = "README.md"
rust-version = "1.81"
exclude      = ["docs/**", "tests/fixtures/**"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
[dependencies]
dvb-common   = { path = "../dvb-common", version = "7.9", default-features = false }
dvb-bbframe  = { path = "../dvb-bbframe", version = "7.9", optional = true, default-features = false }
chrono       = { version = "0.4", optional = true, default-features = false, features = ["alloc"] }
erased-serde = { version = "0.4", optional = true }
thiserror = { version = "2", default-features = false }
num_enum = { version = "0.7", default-features = false }
bytes        = { version = "1", optional = true }
serde        = { version = "1", optional = true, features = ["derive"] }
yoke         = { version = "0.7", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
dvb-si     = { path = "../dvb-si", features = ["ts"] }
criterion  = { version = "0.5", features = ["html_reports"] }

[[bench]]
name              = "t2mi_hot_paths"
harness           = false
required-features = ["ts"]

[features]
default = ["std", "ts"]
# `std` links the standard library. Without it the crate is `#![no_std]` and
# needs only `alloc`.
std     = ["dvb-common/std", "dvb-bbframe?/std", "chrono?/std", "chrono?/clock", "thiserror/std", "num_enum/std"]
# `ts`: the feed-and-iterate pump (feed_ts) and the InnerTsRecovery driver,
# which pulls in `bytes` and the `dvb-bbframe` BBFrame extractor.
ts      = ["dep:bytes", "dep:dvb-bbframe"]
serde   = ["dep:serde", "dep:erased-serde"]

# `chrono`: decoded UTC emission-time accessor on T2TimestampPayload.
# Mirrors dvb-si's chrono feature; OFF by default.
chrono  = ["dep:chrono", "dvb-common/chrono"]

# yoke::Yokeable on the zero-copy payload view types (mirrors dvb-si's `yoke`
# feature) — own a parsed T2-MI payload past the input buffer's borrow.
yoke    = ["dep:yoke"]
