[package]
name         = "dvb-tools"
version      = "8.2.1"
description  = "Command-line DVB stream analyzer (dump / services / epg / pids / t2mi) over the rust-broadcast crates."
edition      = "2021"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/fishloa/rust-broadcast"
rust-version = "1.81"
readme       = "README.md"
keywords     = ["dvb", "mpeg-ts", "analyzer", "cli", "broadcast"]
categories   = ["command-line-utilities", "parsing"]

[[bin]]
name = "dvb-tools"
path = "src/main.rs"

[dependencies]
dvb-si    = { path = "../dvb-si",    version = "8", features = ["ts", "serde", "chrono"] }
dvb-t2mi  = { path = "../dvb-t2mi",  version = "8", features = ["ts"] }
mpeg-ts   = { path = "../mpeg-ts",   version = "0.1", default-features = false, features = ["std"] }
serde_json = "1"
clap       = { version = "4.5", features = ["derive"] }
