[package]
name    = "dvb-ule"
version = "0.1.0"
edition = "2021"
description = "ULE (Unidirectional Lightweight Encapsulation, RFC 4326 + RFC 5163) — IP over MPEG-2 TS: SNDU encapsulation, extension-header chains, and TS-packet de-fragmentation."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords = ["ule", "rfc4326", "mpeg-ts", "encapsulation", "broadcast"]
categories = ["parser-implementations", "network-programming", "no-std"]
repository   = "https://github.com/fishloa/rust-dvb"
readme       = "README.md"
rust-version = "1.81"
exclude = ["docs/**", "tests/fixtures/**"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
dvb-common = { path = "../dvb-common", version = "7.8", default-features = false }
thiserror  = { version = "2", default-features = false }
serde      = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
# `std` links the standard library. Without it the crate is `#![no_std]` and
# needs only `alloc`.
std = ["dvb-common/std", "thiserror/std"]
serde = ["dep:serde"]
