[package]
name    = "dvb-ule"
version = "0.1.1"
edition = "2024"
description = "Deprecated shim — use the `ule` crate instead."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords = ["ule", "rfc4326", "mpeg-ts", "encapsulation", "broadcast"]
categories = ["parser-implementations", "network-programming", "no-std"]
repository   = "https://github.com/fishloa/rust-broadcast"
readme       = "README.md"
rust-version = "1.86"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ule = { path = "../ule", version = "0.2", default-features = false }

[features]
default = ["std"]
std   = ["ule/std"]
serde = ["ule/serde"]
