[package]
name         = "rust-dvb-fuzz"
version      = "0.0.0"
edition      = "2024"
description  = "cargo-fuzz harness for the rust-dvb workspace"
license      = "MIT OR Apache-2.0"
publish      = false

[package.metadata]
cargo-fuzz = true

[workspace]

# Redirect crates.io references (used by dvb-ci) to the local workspace paths,
# so all crates share the same broadcast-common/dvb-si type definitions and the
# dvb_common::Parse trait is the same instance.
[patch.crates-io]
broadcast-common = { path = "../broadcast-common" }
dvb-si     = { path = "../dvb-si" }

[dependencies]
broadcast-common   = { path = "../broadcast-common" }
dvb-si       = { path = "../dvb-si",       features = ["ts", "serde"] }
dvb-t2mi     = { path = "../dvb-t2mi",     features = ["ts"] }
dvb-bbframe  = { path = "../dvb-bbframe" }
mpeg-pes     = { path = "../mpeg-pes" }
dvb-subtitle = { path = "../dvb-subtitle" }
mpeg-ps      = { path = "../mpeg-ps" }
scte104      = { path = "../scte104" }
cc-data      = { path = "../cc-data" }
dvb-ci       = { path = "../dvb-ci" }
scte35-splice = { path = "../scte35-splice" }
st291        = { path = "../st291", features = ["rtp"] }
rtcp-packet  = { path = "../rtcp-packet" }
rtp-packet   = { path = "../rtp-packet", features = ["rfc8285"] }
st12-1       = { path = "../st12-1" }
st337        = { path = "../st337" }
libfuzzer-sys = "0.4"

[[bin]]
name = "si_table_section"
path = "fuzz_targets/si_table_section.rs"
test = false
doc = false

[[bin]]
name = "si_descriptor_loop"
path = "fuzz_targets/si_descriptor_loop.rs"
test = false
doc = false

[[bin]]
name = "si_demux"
path = "fuzz_targets/si_demux.rs"
test = false
doc = false

[[bin]]
name = "si_text"
path = "fuzz_targets/si_text.rs"
test = false
doc = false

[[bin]]
name = "carousel"
path = "fuzz_targets/carousel.rs"
test = false
doc = false

[[bin]]
name = "t2mi_pump"
path = "fuzz_targets/t2mi_pump.rs"
test = false
doc = false

[[bin]]
name = "bbframe"
path = "fuzz_targets/bbframe.rs"
test = false
doc = false

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false

[[bin]]
name = "pes"
path = "fuzz_targets/pes.rs"
test = false
doc  = false

[[bin]]
name = "subtitle"
path = "fuzz_targets/subtitle.rs"
test = false
doc  = false

[[bin]]
name = "mpeg_ps"
path = "fuzz_targets/mpeg_ps.rs"
test = false
doc  = false

[[bin]]
name = "scte104"
path = "fuzz_targets/scte104.rs"
test = false
doc  = false

[[bin]]
name = "cc"
path = "fuzz_targets/cc.rs"
test = false
doc  = false

[[bin]]
name = "ci_apdu"
path = "fuzz_targets/ci_apdu.rs"
test = false
doc  = false

[[bin]]
name = "ci_tpdu"
path = "fuzz_targets/ci_tpdu.rs"
test = false
doc  = false

[[bin]]
name = "scte35"
path = "fuzz_targets/scte35.rs"
test = false
doc  = false

[[bin]]
name = "st291"
path = "fuzz_targets/st291.rs"
test = false
doc  = false

[[bin]]
name = "rtcp_packet"
path = "fuzz_targets/rtcp_packet.rs"
test = false
doc  = false

[[bin]]
name = "rtp_packet"
path = "fuzz_targets/rtp_packet.rs"
test = false
doc  = false

[[bin]]
name = "st12_1"
path = "fuzz_targets/st12_1.rs"
test = false
doc  = false

[[bin]]
name = "st337"
path = "fuzz_targets/st337.rs"
test = false
doc  = false
