[package]
name         = "ll-hls-client"
version      = "0.1.0"
edition      = "2024"
description  = "Sans-IO Low-Latency HLS (RFC 8216bis) playback client engine — a caller-driven blocking-reload scheduler, part-prefetch fetch pipeline, and ordered init+access-unit output, reusing transmux::hls for playlist parse and transmux::Fmp4Demux for CMAF->Sample decode. Zero IO deps in the core (issue #717 slices 2-4); an optional tokio+reqwest async IO adapter (slice 5) is feature-gated and additive."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords     = ["hls", "llhls", "sans-io", "streaming", "client"]
categories   = ["multimedia", "network-programming", "parser-implementations"]
repository   = "https://github.com/fishloa/rust-broadcast"
readme       = "README.md"
rust-version = "1.86"
exclude      = ["docs/**"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
broadcast-common = { path = "../broadcast-common", version = "8", default-features = false }
transmux          = { path = "../transmux", version = "0.17", default-features = false }
thiserror         = { version = "2", default-features = false }
serde             = { version = "1", optional = true, default-features = false, features = ["derive", "alloc"] }
# Only pulled in by the `tokio` feature (issue #717 slice 5) — the sans-IO
# core (`client.rs`) never depends on either.
tokio             = { version = "1", optional = true, default-features = false, features = ["time"] }
reqwest           = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
# Only exercised by the `tokio`-feature-gated integration tests
# (`tests/glass_to_glass.rs`); dev-dependencies aren't feature-gatable in
# Cargo, so these are always resolved/built for `cargo test`, but that test
# file's body is entirely `#![cfg(feature = "tokio")]`-gated so it compiles
# to nothing when the feature is off.
tokio    = { version = "1", features = ["full"] }
axum     = "0.7"
multimux = { path = "../multimux", version = "0.2" }

[features]
default = ["std"]
# `std` links the standard library. Without it the crate is `#![no_std]` and
# needs only `alloc` — the sans-IO scheduler/fetch/output state machine itself
# never touches a socket or a clock, so it does not need `std` at all; this
# feature exists only to match the workspace's `no_std`-capable-core convention
# (verified by the `--no-default-features` gate) and to let `transmux/std`
# follow along when a caller does want `std`.
std = ["broadcast-common/std", "thiserror/std", "transmux/std"]
# Derive serde on the public wire/event types (`Action`, `Output`, `ResourceId`, ...).
serde = ["dep:serde"]
# `TokioClient` (issue #717 slice 5): an async shell driving the sans-IO
# `LlHlsClient` core over real HTTP (tokio + reqwest/rustls). NOT default —
# the core (`client.rs`) stays IO-free regardless of this feature; enabling
# it only adds the `tokio_client` module alongside it.
tokio = ["std", "dep:tokio", "dep:reqwest"]
